feat(orders): 更新订单退货相关功能与请求管理
- 为“申请管理”模块的子菜单项添加嵌套路由结构，包括商品系列、分类、评价和订单退货申请
- 调整订单退货接口调用方式，使用 fetchQuery 替代 SDK 方法以支持更灵活的参数传递
- 在订单详情页中优化退货信息展示逻辑，直接从订单对象获取 returns 数据
- 修改订单接收退货表单中的容错处理，避免空值报错并增强代码健壮性
- 更新中文翻译文件，优化申请管理相关文案表达
- 在退货请求审核页面增加库存位置选择功能，并支持状态选择和错误提示
- 修复多个组件中存在的潜在未定义访问问题，提升页面稳定性和用户体验

--- a/src/i18n/translations/zhCN.json
+++ b/src/i18n/translations/zhCN.json
@@ -2345,17 +2345,17 @@
   "requests": {
     "domain": "申请管理",
     "checkStatus": "查看您的申请状态并新增申请",
-    "collectionsRequests": "商品合集申请",
+    "collectionsRequests": "商品系列申请",
     "requestsCollections": "申请商品合集",
-    "categoriesRequests": "分类申请",
+    "categoriesRequests": "商品分类申请",
     "requestsCategories": "申请分类",
     "reviewsRequests": "评价相关申请",
     "requestsReviews": "评价取消申请",
-    "ordersRequests": "订单申请",
-    "requestsOrders": "订单取消申请",
+    "ordersRequests": "订单退货申请",
+    "requestsOrders": "订单退货申请",
     "addCollection": "您申请新增商品合集",
     "addCategories": "您申请新增分类",
-    "cancelOrder": "您申请取消订单",
+    "cancelOrder": "退货订单",
     "cancelReview": "您申请取消评价",
     "title": "标题",
     "handle": "标识",
